[package]
name = "rust_aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "./src/day_01.rs"

[[bin]]
name = "day02"
path = "./src/day_02.rs"

[[bin]]
name = "day03"
path = "./src/day_03.rs"

[[bin]]
name = "day04"
path = "./src/day_04.rs"

[[bin]]
name = "day05"
path = "./src/day_05.rs"

[[bin]]
name = "day06"
path = "./src/day_06.rs"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
criterion = "0.4.0"
csv = "1.1.6"
pest = "2.5.1"
pest_derive = "2.5.1"
rayon = "1.6.0"
