[package]
name = "rust_aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "./src/day_01.rs"

[[bin]]
name = "day02"
path = "./src/day_02.rs"

[[bin]]
name = "day03"
path = "./src/day_03.rs"

[[bin]]
name = "day04"
path = "./src/day_04.rs"

[[bin]]
name = "fetchRes"
path = "./src/fetch_res.rs"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
criterion = "0.4.0"
csv = "1.1.6"
dotenv = "0.15.0"
rayon = "1.6.0"
reqwest = { version = "0.11.13", features = ["blocking", "json", "cookies"] }
tokio = "1.22.0"
