[package]
name = "rust_aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "./src/day_01.rs"

[[bin]]
name = "day02"
path = "./src/day_02.rs"

[[bin]]
name = "day03"
path = "./src/day_03.rs"

[[bin]]
name = "day04"
path = "./src/day_04.rs"

[[bin]]
name = "fetch_res"
path = "./src/fetch_res.rs"

[[bin]]
name = "day05"
path = "./src/day_05.rs"

[[bin]]
name = "day06"
path = "./src/day_06.rs"

[[bin]]
name = "day07"
path = "./src/day_07.rs"

[[bin]]
name = "day08"
path = "./src/day_08.rs"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
criterion = "0.4.0"
csv = "1.1.6"
dotenv = "0.15.0"
nalgebra = "0.31.4"
pest = "2.5.1"
pest_derive = "2.5.1"
rayon = "1.6.0"
reqwest = { version = "0.11.13", features = ["blocking", "json", "cookies"] }
tokio = "1.22.0"

[[bin]]
name = "day_09"
path = "./src/day_09.rs"

[[bin]]
name = "day_10"
path = "./src/day_10.rs"
[[bin]]
name = "day_11"
path = "./src/day_11.rs"
[[bin]]
name = "day_12"
path = "./src/day_12.rs"
[[bin]]
name = "day_13"
path = "./src/day_13.rs"
